Security & Access Rights Auditor/main/default/objects/UserClonerDetails__c/UserClonerDetails__c.object-meta.xml
<CustomObject>
    <label>User Cloner Details</label>
    <nameField>
        <label>Source User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Cloner Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>