Security & Access Rights Auditor/main/default/objects/UserClonerDetails__c/fields/ClonedDate__c.field-meta.xml
<CustomField>
    <fullName>ClonedDate__c</fullName>
    <label>Cloned Date</label>
    <type>DateTime</type>
</CustomField>