Security & Access Rights Auditor/main/default/objects/UserClonerDetails__c/fields/ClonedUserId__c.field-meta.xml
<CustomField>
    <fullName>ClonedUserId__c</fullName>
    <label>Cloned User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>