Security & Access Rights Auditor/main/default/objects/UserClonerDetails__c/fields/ClonedUserName__c.field-meta.xml
<CustomField>
    <fullName>ClonedUserName__c</fullName>
    <label>Cloned User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>