Security & Access Rights Auditor/main/default/objects/UserClonerDetails__c/fields/SourceUserId__c.field-meta.xml
<CustomField>
    <fullName>SourceUserId__c</fullName>
    <label>Source User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>